Fixed issue with tooltip functionality not being consistent on mobile/desktop
Had a tough time getting hover and focus events to work on mobile, so had to default back to close button approach on tooltips

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -170,6 +170,7 @@ header {
     display: block;
     bottom: 2em; }
   .tooltip .header {
+    position: relative;
     line-height: 40px;
     font-size: 1em;
     margin: 0px;
@@ -177,6 +178,15 @@ header {
     border-radius: 5px 5px 0px 0px;
     font-weight: bold;
     text-transform: uppercase; }
+    .tooltip .header .close {
+      margin-left: auto;
+      height: 100%;
+      display: inline-block;
+      padding: 10px 15px;
+      position: absolute;
+      box-sizing: border-box;
+      vertical-align: middle;
+      right: 0px; }
   .tooltip .description {
     padding: 15px 10px;
     margin: 0px;
